fixed spelling error

--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "landingPage": {
-    "motto": "Share and find great recipies",
+    "motto": "Share and find great recipes",
     "login": "Login",
     "signup": "Sign up"
   },
