fixed spelling error on settings page

--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -62,7 +62,7 @@
     "changeDetails": "Change user details",
     "currentFirstName": "Current first name: ",
     "newFirstName": "New first name",
-    "currentLastName": "Curret last name: ",
+    "currentLastName": "Current last name: ",
     "newLastName": "New last name",
     "currentEmail": "Current email: ",
     "newEmail": "New email",
