tests for recipe page

--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -132,7 +132,7 @@
       "breakfast": "Breakfast",
       "lunch": "Lunch",
       "dinner": "Dinner",
-      "snack": "snack",
+      "snack": "Snack",
       "dessert": "Dessert",
       "addRecipe": "Add recipe",
       "recipeCard": {
